@@ -1,5 +1,8 @@
 Changelog for Hitman
 
+0.x
+ - Remove or merge requested samples
+
 0.6 2014-07-14
  - hitman_execute can now use high-fidelity reads for OTU determination, and assign
    regular reads to these OTUs
